--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-core": "^3.12.1",
-    "apollo-server-express": "^3.12.1",
+    "@apollo/server": "^4.9.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
@@ -33,6 +32,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "express-list-routes": "^1.1.9",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
