protect graphql routes with auth0

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
+BASE_URL=http://localhost:4000
+PORT=4000
+
 POSTGRESQL_HOST=localhost
 POSTGRESQL_PORT=5432
 POSTGRESQL_DB=itrack
 POSTGRESQL_USER=admin
 POSTGRESQL_PW=
+
+AUTH0_API_AUDIENCE=http://localhost:4000/graphql
+AUTH0_DOMAIN=
