--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "graphql": "^16.8.1",
     "knex": "^3.0.1",
     "pg": "^8.11.3"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-ts": "^1.0.0",
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
     "@types/graphql": "^14.5.0",
     "@types/node": "^20.8.10",
@@ -32,7 +35,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "express-list-routes": "^1.1.9",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
