--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
-  "name": "itrack-graphql",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.9.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-oauth2-jwt-bearer": "^1.6.0",
-    "graphql": "^16.8.1",
-    "knex": "^3.0.1",
-    "pg": "^8.11.3"
-  },
-  "devDependencies": {
-    "@stylistic/eslint-plugin-ts": "^1.0.0",
-    "@types/cors": "^2.8.16",
-    "@types/express": "^4.17.20",
-    "@types/graphql": "^14.5.0",
-    "@types/node": "^20.8.10",
-    "@types/pg": "^8.10.7",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  }
+    "name": "itrack-graphql",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "codegen": "graphql-codegen --config codegen.ts",
+        "build": "npm run codegen && tsc",
+        "start": "npm run build && node dist/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@apollo/server": "^4.9.5",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-oauth2-jwt-bearer": "^1.6.0",
+        "graphql": "^16.8.1",
+        "knex": "^3.0.1",
+        "pg": "^8.11.3"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "5.0.0",
+        "@graphql-codegen/typescript": "4.0.1",
+        "@graphql-codegen/typescript-resolvers": "4.0.1",
+        "@stylistic/eslint-plugin-ts": "^1.0.0",
+        "@types/cors": "^2.8.16",
+        "@types/express": "^4.17.20",
+        "@types/graphql": "^14.5.0",
+        "@types/node": "^20.8.10",
+        "@types/pg": "^8.10.7",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
+        "eslint": "^8.53.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.2.2"
+    }
 }
