feat: get user email from token claims

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ POSTGRESQL_PW=
 
 AUTH0_API_AUDIENCE=http://localhost:4000/graphql
 AUTH0_DOMAIN=
+AUTH0_EMAIL_CLAIM=http://localhost:4000/claims/email
