--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ POSTGRESQL_PW=
 AUTH0_API_AUDIENCE=http://localhost:4000/graphql
 AUTH0_DOMAIN=
 AUTH0_EMAIL_CLAIM=http://localhost:4000/claims/email
+AUTH0_M2M_CLIENT_ID=
