--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^4.9.5",
+        "@graphql-tools/schema": "^10.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-oauth2-jwt-bearer": "^1.6.0",
         "graphql": "^16.8.1",
+        "graphql-middleware": "^6.1.35",
         "knex": "^3.0.1",
         "pg": "^8.11.3"
     },
