--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-        "test": "echo \"Error: no test specified\" && exit 1",
         "codegen": "graphql-codegen --config codegen.ts",
         "build": "npm run codegen && tsc",
-        "start": "npm run build && node dist/index.js"
+        "start": "npm run build && node dist/index.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -33,6 +33,7 @@
         "@types/cors": "^2.8.16",
         "@types/express": "^4.17.20",
         "@types/graphql": "^14.5.0",
+        "@types/jest": "^29.5.11",
         "@types/node": "^20.8.10",
         "@types/pg": "^8.10.7",
         "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -41,8 +42,10 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-prettier": "^5.0.1",
+        "jest": "^29.7.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     }
