--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^4.9.5",
+        "@graphql-tools/load-files": "^7.0.0",
+        "@graphql-tools/merge": "^9.0.1",
         "@graphql-tools/schema": "^10.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
